# OpenHyra

./: .gitignore  README.md  README.zh-CN.md  context_agent.py  eb.py  harness.py  llm_backend.py  proposal_agent.py  provenance.py  pyproject.toml  reporting.py  sandbox.py  stopping.py
.github/workflows/: ci.yml
artifacts/: README.md
artifacts/sums_diffs/openhyra-1.111814562869239-legacy/: PROPOSAL.md  README.md  manifest.json  solution.json  solve.sh  solver.py  source_record.json  verification.json  verify.py
seed_solution/: prepare.py  solve.sh  train.py
tasks/nanochat_autoresearch/: TASK.md  task.json
tasks/sums_diffs/: TASK.md  evaluator.py  task.json
tasks/sums_diffs/seed_solution/: solver.py
tests/: __init__.py  test_core.py
